edit and create event fixed, create report when birthdate is null fixed, admin has all groups